fixes navbar alignment issue

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -8,6 +8,7 @@
 
 .page-navigation {
     display: inline-block;
+    text-align: right;
     float: right;
     p {
         font-size: 0.5em;
